# briefcase

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/briefcase/: main.py
